Fixes to improve info and readability.

--- a/app/assets/stylesheets/components/_sponsors.sass
+++ b/app/assets/stylesheets/components/_sponsors.sass
@@ -10,13 +10,50 @@
 @media (max-width: $screen-md-max)
   .dbc-sponsors .sponsor
     margin-top: 2em
-    .avatar img
+    .logo img
       width: 50%
 
 @media (max-width: $screen-xs-max)
   .dbc-sponsors .sponsor
-    .avatar, .bio
+    .logo, .bio
       padding-left: 0
       padding-right: 0
-    .avatar img
+    .logo img
       width: 75%
+
+.dbc-partners
+  .partner
+    margin: 30px 0
+
+    .logo
+      @extend .col-lg-5
+      text-align: center
+      img
+        margin: 0 auto
+        @extend .img-responsive
+
+    .bio
+      @extend .col-lg-7
+
+      h2
+        margin-top: 5px
+        font-size: 1.125em
+
+      p
+        font-size: 0.925em
+        font-weight: light
+
+@media (max-width: $screen-md-max)
+  .dbc-partners .partner
+    margin-top: 2em
+    .logo img
+      width: 50%
+
+@media (max-width: $screen-xs-max)
+  .dbc-partners .partner
+    .logo, .bio
+      padding-left: 0
+      padding-right: 0
+    .logo img
+      width: 75%
+      margin-bottom: 1em
