--- a/app/assets/stylesheets/components/_text.sass
+++ b/app/assets/stylesheets/components/_text.sass
@@ -124,3 +124,7 @@
   .dbc-text
     padding-top: 2em
     paddin-bottom: 2em
+
+    .normal,
+    .centered
+      font-size: 18px
